シーン変更系APIを作成
